pkl-core/src/test/files/LanguageSnippetTests/input/errors/parser6.pkl
res1 = """some string"